crates/edm/tests/snapshots/trade__batch_stdout.snap
---
source: crates/edm/tests/trade.rs
expression: run.stdout
---
== BATCH PLAN ======================================================================================
+----------+----------------------------+
| Field    | Value                      |
+==========+============================+
| market   | 4306502403                 |
| action   | buy until the hold is full |
| order    | Gold -> Silver             |
| cargo    | 10/100 units               |
| retry    | single pass                |
+----------+----------------------------+
[1] buy 90 x Gold @ 9,000 = 810,000 cr  HTTP 200  cargo 100/100  credits 1,000,000
== TRADES  1 requests over 1 round — hold is full ==================================================
+---+------------+-----+-------+---------+------+---------+
| # | Commodity  | Qty |  Unit |   Total | HTTP |   Cargo |
+===+============+=====+=======+=========+======+=========+
| 1 | Gold       |  90 | 9,000 | 810,000 |  200 | 100/100 |
+---+------------+-----+-------+---------+------+---------+
|   | TOTAL      |  90 |       | 810,000 |      | 100/100 |
+---+------------+-----+-------+---------+------+---------+
   credits now 1,000,000
== INVENTORY  1 items ==============================================================================
+------------+-----+--------+---+--------+-------+--------+----------------------+
| Commodity  | Qty |  Value | S | Marked | Owner | Origin | Position (x / y / z) |
+============+=====+========+===+========+=======+========+======================+
| Gold       | 100 | 90,000 | . |      - |     0 |      0 | -                    |
+------------+-----+--------+---+--------+-------+--------+----------------------+
