crates/edm/tests/snapshots/trade__single_stdout.snap
---
source: crates/edm/tests/trade.rs
expression: run.stdout
---
   resolving against /2.0/elite/market/list for market 4306502403...
== TRADE PLAN  buy 5 x Gold ========================================================================
+-----------------+------------------+---------+
| Field           | Value            | From    |
+=================+==================+=========+
| marketId        | 4306502403       | flag    |
| transactionType | buy              | flag    |
| commodityId     | 128049204 (Gold) | market  |
| blackMarket     | 0                | market  |
| stolen          | 0                | default |
| unitPrice       | 9,000            | market  |
| qty             | 5                | flag    |
| finalQty        | 15               | market  |
| total           | 45,000 cr        | default |
+-----------------+------------------+---------+
   Gold: stock 120 | demand - | buy 9,000 | sell 8,900 | fence - | held 10
== REQUEST  PUT /2.0/elite/market/trade ============================================================
+-----------------+--------------------------------------------------------+
| Field           | Value                                                  |
+=================+========================================================+
| TARGET                                                                   |
+-----------------+--------------------------------------------------------+
| method          | PUT                                                    |
| endpoint        | https://api.orerve.net/2.0/elite/market/trade          |
| query           | 3,068 chars base64 OwnhqWtfReByBYXVnJWG...04KL4rvPFg== |
+-----------------+--------------------------------------------------------+
| HEADERS                                                                  |
+-----------------+--------------------------------------------------------+
| encrypted       | 1                                                      |
| fdev-retry      | 0/2                                                    |
| fdev-season     | 4                                                      |
| fdev-semver     | 4.4.0.3                                                |
| nonce           | 000000000001                                           |
| request-time    | 12345000                                               |
| user-agent      | EDGame/11.0/Win64                                      |
+-----------------+--------------------------------------------------------+
| ENVELOPE                                                                 |
+-----------------+--------------------------------------------------------+
| cmdrId          | F1234567                                               |
| marketId        | 4306502403                                             |
| transactionType | buy                                                    |
| commodityId     | 128049204                                              |
| blackMarket     | 0                                                      |
| stolen          | 0                                                      |
| unitPrice       | 9000                                                   |
| qty             | 5                                                      |
| finalQty        | 15                                                     |
| fTime           | 1700000000                                             |
| machineId       | machine-1                                              |
| machineToken    | 80 chars (hidden)                                      |
| authToken       | 2024 chars (hidden)                                    |
| plaintext       | 2,299 bytes                                            |
| nonce           | 000000000001                                           |
| fTime           | 1700000000 (2023-11-14T22:13:20.000Z)                  |
| requestTime     | 12,345,000 ms (uptime 03:25:45)                        |
+-----------------+--------------------------------------------------------+
   pass --full-url to print the encrypted query in full
== RESPONSE  HTTP 200 OK ===========================================================================
+------------------+--------------------------+
| Field            | Value                    |
+==================+==========================+
| HEADERS                                     |
+------------------+--------------------------+
| content-type     | application/octet-stream |
| nonce            | 0123456789ab             |
| uncompressedsize | 906                      |
+------------------+--------------------------+
== TRADE RESULT  buy Gold ==========================================================================
+-----------------------+-------------------+
| Field                 | Value             |
+=======================+===================+
| credits               | 1,000,000 cr      |
| debt                  | 0 cr              |
| commodities           | 3 in 2 categories |
| supplied (stock > 0)  | 2                 |
| in demand             | 1                 |
| consumers / producers | 1 / 2             |
| rare / illegal        | 0 / 0             |
| allowsDumping         | yes               |
| inventory items       | 1                 |
+-----------------------+-------------------+
== INVENTORY  1 items ==============================================================================
+------------+-----+--------+---+--------+-------+--------+----------------------+
| Commodity  | Qty |  Value | S | Marked | Owner | Origin | Position (x / y / z) |
+============+=====+========+===+========+=======+========+======================+
| Gold       |  15 | 90,000 | . |      - |     0 |      0 | -                    |
+------------+-----+--------+---+--------+-------+--------+----------------------+
== GOLD  after the trade ===========================================================================
+-----------+--------------+-------+-----+-------+-------+-------+--------+-----+-------+------+
|        ID | Commodity    | Stock | Stk |   Buy |  Sell | Fence | Demand | Dmd |  Mean | CPRI |
+===========+==============+=======+=====+=======+=======+=======+========+=====+=======+======+
| 128049204 | Gold         |   120 | ##. | 9,000 | 8,900 |     - |      - | ... | 9,500 | .P.. |
+-----------+--------------+-------+-----+-------+-------+-------+--------+-----+-------+------+
   pass --full-market to print the whole commodity table from this response
